--- a/Armor.html
+++ b/Armor.html
@@ -49,9 +49,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <button class="btn btn-outline-secondary btn-lg" id="menu-toggle">Menu</button>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        
 
       
       </nav>
@@ -83,7 +81,7 @@
       </div>
       <div class="jumbotron ">
         <div class="container">
-          <h1 class="display-5">Rusty Bronze Armo</h1>
+          <h1 class="display-5">Rusty Bronze Armor</h1>
           <p class="lead">Inside Haven Armor Shop for 1,750 Gold.</p>
           <p class="lead req">7 Defense Req | 105 Durability</p>
         </div>
